dark mode fixed

--- a/src/scss/layout/_main.scss
+++ b/src/scss/layout/_main.scss
@@ -1,20 +1,15 @@
 #main {
-    #main-content {
-        #content-wrapper #navigation {
-            a {
-                display: flex;
-                gap: 8px;
-                font-weight: 600;
-                align-items: center;
-                font-size: 14px;
-                padding: 4px;
-                border-radius: 5px;
-            }
-
-            .active {
-                background-color: rgb(232, 232, 232);
-
-            }
-        }
+  #main-content {
+    #content-wrapper #navigation {
+      a {
+        display: flex;
+        gap: 8px;
+        font-weight: 600;
+        align-items: center;
+        font-size: 14px;
+        padding: 4px;
+        border-radius: 5px;
+      }
     }
+  }
 }
